# mainakchhari.com

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.debug.yml  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml
templates/: index.html
webserver/: settings.py  urls.py
