[tool.poetry]
name = "mainakchhari-com"
version = "0.1.0"
description = "My personal homepage in django"
authors = ["Mainak Chhari <8137117+mainakchhari@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
gunicorn = "^23.0.0"
django-environ = "^0.11.2"
whitenoise = { extras = ["brotli"], version = "^6.7.0" }


[tool.poetry.group.dev.dependencies]
djlint = "^1.34.1"
pre-commit = "^3.8.0"
black = "^24.8.0"
isort = "^5.13.2"
ruff = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py312"]

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E501", "E741"]
